some css changes

--- a/views/addons.ejs
+++ b/views/addons.ejs
@@ -1,4 +1,5 @@
 <% layout('/layout/boilerplate') %>
+    <link rel="stylesheet" href="style.css">
     <div class="d-flex flex-column  w-75">
         <h1 class="pt-4">Finishing up</h1>
         <p class="text-muted">Double-check everything looks OK before confirming.</p>
@@ -75,10 +76,6 @@
                             </div>
 
     </div>
-    <script>
-        (() => {
-            const div = document.querySelector('#forth')
-            div.classList.add("circleFirst")
-            div.classList.remove('circleDiv')
-        })()
+    <script src="/forth.js">
+
     </script>
