--- a/views/finish.ejs
+++ b/views/finish.ejs
@@ -11,10 +11,6 @@
                 you
                 ever need support, please feel free to email us at support@loremgaming.com.</p>
         </div>
-        <script>
-            (() => {
-                const div = document.querySelector('#forth')
-                div.classList.add("circleFirst")
-                div.classList.remove('circleDiv')
-            })()
+        <script src="forth.js">
+
         </script>
