--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,10 +59,6 @@
     <script src="/validation.js">
 
     </script>
-    <script>
-        (() => {
-            const div = document.querySelector('#first')
-            div.classList.add("circleFirst")
-            div.classList.remove('circleDiv')
-        })()
+    <script src="/first.js">
+
     </script>
