--- a/views/total.ejs
+++ b/views/total.ejs
@@ -93,21 +93,6 @@
 
     </form>
 
-    <script>
-        (() => {
-            const div = document.querySelector('#third')
-            div.classList.add("circleFirst")
-            div.classList.remove('circleDiv')
-            const addon = document.querySelectorAll('.total');
-            const divTotal = document.querySelectorAll('.addons')
-            for (let i = 0; i < addon.length; i++) {
-                addon[i].addEventListener('change', () => {
-                    if (addon[i].checked) {
-                        divTotal[i].classList.add('addons-clicked')
-                    } else {
-                        divTotal[i].classList.remove('addons-clicked')
-                    }
-                })
-            }
-        })()
+    <script src="/third.js">
+
     </script>
