--- a/views/finish.ejs
+++ b/views/finish.ejs
@@ -11,6 +11,7 @@
                 you
                 ever need support, please feel free to email us at support@loremgaming.com.</p>
         </div>
-        <script src="forth.js">
+    </div>
+    <script src="forth.js">
 
-        </script>
+    </script>
