--- a/views/layout/boilerplate.ejs
+++ b/views/layout/boilerplate.ejs
@@ -18,10 +18,10 @@
     <div class="container justify-content-center h-100 mx-0 px-0 mx-md-auto px-md-auto">
         <div class="container  myBorder justify-content-center">
             <div class="row my-md-4">
-                <div class="col-md-3 relat ps-md-4 py-md-3 mx-0 px-0">
+                <div class="col-md-3 relat ps-md-4 py-md-3 mx-0 px-0" role="navigation">
                     <%- include("navigation.ejs") %>
                 </div>
-                <div class="col-md-9 rounded-4 d-flex justify-content-center  myBody py-md-3 ">
+                <div class="col-md-9 rounded-4 d-flex justify-content-center  myBody py-md-3 " role="main">
                     <%- body %>
 
                 </div>
@@ -30,7 +30,7 @@
         </div>
 
     </div>
-    <div class="attribution mt-auto">
+    <div class="attribution mt-auto" role="contentinfo">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
             Mentor</a>.
         Coded by <a href="#">Anna Sirotkina</a>.
